Minimize item categories without unsupported Lombok